# media-integrity-api

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  _test_mcp_client.py  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  mcp_server.py  pyproject.toml  railway.toml  report_config.yaml  risk_bands.yaml  scoring_rules.yaml  scoring_weights.yaml  start.bat
.github/workflows/: ci.yml
api/: authentication.py
api/v1/: permissions.py  serializers.py  urls.py
config/: celery.py  urls.py
config/settings/: base.py  development.py  production.py
core/: admin.py  models.py
core/migrations/: 0001_initial.py  0002_simplify_roles.py  0003_add_report_config_per_user.py  0004_add_account_sync_interval.py  0005_user_google_ads_accounts_m2m.py  0006_ga4_property_model.py  0007_audit_slug.py  0008_phase3_red_flag_rules.py
docs/: README.md  api-reference.md  architecture.md  audit-pipeline.md  authentication.md  data-model.md  deployment.md
engine/auth/: __init__.py  credential_store.py  ga4_manager.py  mcc_manager.py  oauth_flow.py
engine/connectors/: __init__.py  base_connector.py
engine/fixtures/: __init__.py  demo_data.py
engine/mcp/: __init__.py  server.py  tools.py
engine/normalization/: __init__.py  attribution_config.py  auction_density.py  brand_classifier.py  campaigns_daily.py  conversions_snapshot.py  creative_velocity.py  customer_lists.py  ga4_channel_performance.py  ga4_events.py  keyword_quality.py  nca_settings.py  negative_keywords.py  pmax_audiences.py  (+2 more)
output/: _test_ga4_report.html
scripts/: get_refresh_token.py
tasks/: __init__.py  audit_tasks.py  sync_accounts.py
tests/: test_compound_conditions.py  test_phase3_normalization.py
(+140 files in other folders)
